--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">日本職棒</h2>
-            <p>　　日本職棒共有12個球團分為太平洋聯盟、中央聯盟兩個聯盟進行一整年（3月底～10月初）143場比賽的排名對戰，每年5~6月左右也會進行兩個聯盟的交流賽，季後舉行所謂「高潮系列賽」，聯盟2、3名進行3戰2勝的淘汰賽，勝者與聯盟排名第一進行7戰4勝的比賽決定日本一系列賽的進出隊伍，聯盟排名第一隊伍享有1勝的優待且無論是否進入日本一決賽都不會影響聯盟冠軍的資格，最後由兩聯盟高潮系列賽勝出隊伍以7戰4勝決定日本一優勝者。
+            <p>　　日本職棒共有12個球團，分為太平洋聯盟、中央聯盟兩個聯盟進行一整年（3月底～10月初）143場比賽的排名對戰，每年5~6月左右也會進行兩個聯盟的交流賽，季後舉行所謂「高潮系列賽」，聯盟2、3名進行3戰2勝的淘汰賽，勝者與聯盟排名第一進行7戰4勝的比賽決定日本一系列賽的進出隊伍，聯盟排名第一隊伍享有1勝的優待且無論是否進入日本一決賽都不會影響聯盟冠軍的資格，最後由兩聯盟高潮系列賽勝出隊伍以7戰4勝決定日本一優勝者。
 </p>
 		  </div>
         </div>
@@ -76,7 +76,7 @@
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
   　　　　　<h2 class="display-4">東北樂天金鷲</h2>
-    　　　　　<p>　　主場位於宮城縣仙台市的楽天生命球場，是目前日本１２球團中最晚成立的一支。雖然成立不久，但隊中已培育出如田中將大（現紐約洋基）、岩隈久志（現讀賣巨人）等大聯盟等級球員，現有許多出色投手如則本昂大、岸孝之、松井裕樹，野手部分也有２０１８年拿下新人王的田中和基、擁有異次元打擊能力的銀次，去年也選進有國手經驗的辰巳涼介等出色選手。</p>
+    　　　　　<p>　　主場位於宮城縣仙台市的樂天生命球場，是目前日本１２球團中最晚成立的一支。雖然成立不久，但隊中已培育出如田中將大（現紐約洋基）、岩隈久志（現讀賣巨人）等大聯盟等級球員，現有許多出色投手如則本昂大、岸孝之、松井裕樹，野手部分也有２０１８年拿下新人王的田中和基、擁有異次元打擊能力的銀次，去年也選進有國手經驗的辰巳涼介等出色選手。</p>
 	           <p>　　２０１９年樂天應援團進行重組，應援曲進行了大量改版，其中田中和基的應援曲因為太過洗腦有喜感而在日本颳起一陣旋風。</p>
 			   <p>選手應援曲－田中和基</p>
 			    <iframe width="560" height="315" src="https://www.youtube.com/embed/czoZJMvAAAQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -119,7 +119,7 @@
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
   　　　　　<h2 class="display-4">歐力士野牛</h2>
-    　　　　　<p>　　主場位於大阪府的大阪京瓷巨蛋。近幾年常駐在聯盟Ｂ段班的歐力士，加上去年隊中強投西勇輝（現阪神虎）及金子千尋（現日本火腿）的離隊，球隊陷入相當的苦境。今年（２０１９）由前羅德「跑步將軍」的西村德文接任總教練，打出「速度野球」的標語，由西浦颯大、福田周平等腳程快的選手帶領下肌及攻佔壘包，加上吉田正尚、杉本裕太郎等大砲型打者，與近年崛起的年輕好投山岡泰輔、山本由伸等人，希望能帶領球隊打出好成績。
+    　　　　　<p>　　主場位於大阪府的大阪京瓷巨蛋。近幾年常駐在聯盟Ｂ段班的歐力士，加上去年隊中強投西勇輝（現阪神虎）及金子千尋（現日本火腿）的離隊，球隊陷入相當的苦境。今年（２０１９）由前羅德「跑步將軍」的西村德文接任總教練，打出「速度野球」的標語，由西浦颯大、福田周平等腳程快的選手帶領下積極攻佔壘包，加上吉田正尚、杉本裕太郎等大砲型打者，與近年崛起的年輕好投山岡泰輔、山本由伸等人，希望能帶領球隊打出好成績。
 </p>
 	           <p>吉田正尚</p>
 			    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z0jjpzx-lFs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -138,7 +138,7 @@
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
   　　　　　<h2 class="display-4">埼玉西武獅</h2>
-    　　　　　<p>　　主場位於埼玉縣的大都會人壽巨蛋。去年（２０１８）睽違１０年拿下了聯盟冠軍，靠的是恐怖的「山賊打線」。連續多年打擊率超過三成的日本單季最多安打紀錄保持者－秋山翔吾、在１７年填補令西武困擾的游擊手位置並拿下新人王的源田壮亮、全壘打量產停不下來的山川穗高、過去曾六度獲得全壘打王獎項的大砲三壘手中村剛也，讓其他隊的投手十分困擾。</p>
+    　　　　　<p>　　主場位於埼玉縣的大都會人壽巨蛋。去年（２０１８）睽違１０年拿下了聯盟冠軍，靠的是恐怖的「山賊打線」。連續多年打擊率超過三成的日本單季最多安打紀錄保持者－秋山翔吾、在１７年填補令西武困擾的游擊手位置並拿下新人王的源田壯亮、全壘打量產停不下來的山川穗高、過去曾六度獲得全壘打王獎項的大砲三壘手中村剛也，讓其他隊的投手十分困擾。</p>
 	           <p>　　去年陣中強打二壘手淺村榮斗（現東北樂天）離隊，陣中王牌投手菊池雄星（現西雅圖水手）前往大聯盟發展，該如何克服投打戰力皆失的問題，是今年（２０１９）西武能否蟬聯聯盟冠軍的關鍵。</p>
 			   <p>山川穗高應援歌</p>
 			    <iframe width="560" height="315" src="https://www.youtube.com/embed/vBxfTGLQVqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -187,7 +187,7 @@
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
   　　　　　<h2 class="display-4">橫濱DeNA海灣之星</h2>
-    　　　　　<p>　　主場位於神奈川縣橫濱市的橫濱球場。橫濱ＤｅＮＡ近年在選秀會上頗有佳作，接連選進了強力左投今永昇太、濵口遥大、１８年新人王東克樹，及現任守護神、１５年更新新人最多救援成功紀錄並拿下新人王的山崎康晃，可說是年輕投手王國。隊中更有擔任日本國家武士隊四棒的豪打筒香嘉智、一壘金手套等級洋砲López、去年開季晚到卻依然拿下全壘打王獎項的Soto。２０１７年更曾經以聯盟排名第三之姿突破高潮系列戰，進入日本一決戰，可惜輸給福岡軟銀鷹。今年（２０１９）是球團成立７０週年，以奪回睽違２０年的聯盟冠軍及日本一為目標拚戰。</p>
+    　　　　　<p>　　主場位於神奈川縣橫濱市的橫濱球場。橫濱ＤｅＮＡ近年在選秀會上頗有佳作，接連選進了強力左投今永昇太、濱口遙大、１８年新人王東克樹，及現任守護神、１５年更新新人最多救援成功紀錄並拿下新人王的山崎康晃，可說是年輕投手王國。隊中更有擔任日本國家武士隊四棒的豪打筒香嘉智、一壘金手套等級洋砲López、去年開季晚到卻依然拿下全壘打王獎項的Soto。２０１７年更曾經以聯盟排名第三之姿突破高潮系列戰，進入日本一決戰，可惜輸給福岡軟銀鷹。今年（２０１９）是球團成立７０週年，以奪回睽違２０年的聯盟冠軍及日本一為目標拚戰。</p>
 	           <p>山崎康晃登場曲ーYasuaki Jump</p>
 			    <iframe width="560" height="315" src="https://www.youtube.com/embed/buvERnGtc-s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			   <p>筒香嘉智</p>
@@ -226,7 +226,7 @@
           <div class="p-5">
   　　　　　<h2 class="display-4">東京養樂多燕子</h2>
     　　　　　<p>　　主場位於東京都新宿區的明治神宮野球場，是日本職棒主場設於東京的其中一支。養樂多最著名的是在得分後，球迷們會撐起藍紅綠色的小雨傘進行慶祝，可說是１２球團中最有特色的一種。</p>
-	           <p>　　說到養樂多，不得不提去年從大聯盟歸隊的青木宣親，從以前就是著名的安打製造機，即使年紀大回到養樂多還是能打出超過３成打率的高水準成績。另外有攻、守、跑三拍子的強打山田哲人，已３度造就打擊率３成、３０轟、３０盜壘的恐怖成績。更有超越世界全壘打王王貞治紀錄的現任單季最多全壘打紀錄保持者的洋砲－Balentien。近年養樂多較困擾其先發輪值並不穩定，正積極補強中，相信養樂多投手群若能穩定下來，重回睽違4年的聯盟王者寶座決不是天方夜譚。
+	           <p>　　說到養樂多，不得不提去年從大聯盟歸隊的青木宣親，從以前就是著名的安打製造機，即使年紀大回到養樂多還是能打出超過３成打率的高水準成績。另外有攻、守、跑三拍子的強打山田哲人，已３度造就打擊率３成、３０轟、３０盜壘的恐怖成績。更有超越世界全壘打王王貞治紀錄的現任單季最多全壘打紀錄保持者的洋砲－Balentien。近年養樂多較困擾其先發輪值並不穩定，正積極補強中，相信養樂多投手群若能穩定下來，重回睽違4年的聯盟王者寶座絕不是天方夜譚。
 </p>
 			   <p>得點應援曲－東京音頭</p>
 			    <iframe width="560" height="315" src="https://www.youtube.com/embed/05BIMA_aFAI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -262,7 +262,7 @@
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
   　　　　　<h2 class="display-4">中日龍</h2>
-    　　　　　<p>　　主場位於愛知縣名古屋市的名古屋巨蛋，名古屋巨蛋最引人注目的無非是外野那兩支頂天立地的界外竿，無論打者打出多高的全壘打都不用擔心。</p>
+    　　　　　<p>　　主場位於愛知縣名古屋市的名古屋巨蛋，名古屋巨蛋最引人注目的無非是外野那兩支頂天立地的界外杆，無論打者打出多高的飛球都不用擔心。</p>
 	           <p>　　龍隊近年來戰績持續低走，先發輪值不穩定是其中的問題。今年補進了洋將Romero，另有本土投手大野雄大、柳裕也、笠原祥太郎等人崛起，17年選秀選進了現任守護神鈴木博志，去年更從四球團中抽走大阪桐蔭二刀流選手根尾昂。打者方面有17年新人王京田陽太、穩定選出日本國家武士隊的平田良介、快腿中外野手大島洋平及左右開弓洋將Almonte。期待年輕龍隊今年能在與田剛新監督的帶領下打出好成績。
 </p>
 			   <p>平田良介完全打擊</p>
